# OS_LABORATORY

./: CMakeLists.txt  bankers_algorithm.cpp  best_fit.cpp  dining_philosopher.cpp  fcfs.cpp  fit1_first.cpp  indexed.cpp  page_fcfs.cpp  page_lfu.cpp  pages_lru.cpp  priority.cpp  rr.cpp  sequential.cpp  sjf.cpp  worstfit.cpp
exportToHTML/: dining_philosopher.cpp.html
